--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Данный проект - входное задание на позицию стажер frontend-разработчик в компанию Digital Design",
   "main": "index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
     "start": "webpack serve",
     "server": "json-server -w server/db.json -p 3001",
@@ -21,6 +23,7 @@
     "concurrently": "^8.0.1",
     "css-loader": "^6.7.4",
     "cssnano": "^6.0.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "json-server": "^0.17.3",
     "mini-css-extract-plugin": "^2.7.6",
